--- a/w271_Lab1_main.Rmd
+++ b/w271_Lab1_main.Rmd
@@ -57,24 +57,13 @@ Carefully read the Dalal et al (1989) paper (Skip Section 5).
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
-# Potentially delete libraries...(Jeff)
 #Import libraries
 library(car)
 library(dplyr)
-library(Hmisc)
 library(stargazer)
 library(ggfortify)
-library(corrplot)
-library(corrgram)
 library(ggplot2)
-library(tidyr)
-library(lmtest)
-library(sandwich)
-library(gridExtra)
-library(nnet)
 library(mcprofile)
-library(dplyr)
-
 ```
 
 
@@ -132,7 +121,7 @@ ggplot(challenger, aes(x = Pressure)) +
 
 ```
 
-The histogram above confirms our notion that PSI measurements in the dataset occur in regular increments, with most measurements taking place at 200psi, but other measurements also taking place at 50 and 100 psi as well.  You could potentially treat this as either an ordinal variable or a discrete integer variable.  We choose to leave as a discrete integer variable.
+The histogram above confirms our notion that PSI measurements in the dataset occur in regular increments, with most measurements taking place at 200psi, but other measurements also taking place at 50 and 100 psi as well. We had considered converting Pressure to a categorical variable, since there are only 3 distinct values for Pressure (50, 100, 200) in the given dataset. However, we were also concerned that in converting Pressure to categorical, we would be losing some of the scaling factor of Pressure, thereby losing some of the predictive power for the variable. We choose to leave as a discrete integer variable.
 
 ```{r}
 # Distribution of Temp
@@ -156,6 +145,7 @@ Taking into consideration the two explanatory variables that matter for our anal
 
 From this chart, we can draw several conclusions.  First, most O-ring failures seem to occur at higher pressures.  Second, most O-ring failures seem to occur at lower temperatures, with the only datapoint having two failures occuring at the lowest recorded temperatures.  
 
+
 ```{r}
 chart.a <- ggplot(challenger, aes(factor(O.ring), Temp)) +  
   geom_boxplot(aes(fill = factor(O.ring))) + 
@@ -172,6 +162,7 @@ chart.b <- ggplot(challenger, aes(factor(O.ring), Pressure)) +
 
 The two boxplots we examine here further illustrate the distribution of our two key explanatory variables, but using color to bring out O.ring failure.  The first boxplot serves to reaffirm our first hypothesis that O.ring failures tend to occur at lower temperatures, while the second boxplot indicates that apart from one outlier at 50psi, O.ring failures all occur at 200psi (higher pressure).  Thus, without having constructed any formal models or analytics, an initial view of the data may seem to indicate that lower temperatures and higher pressures lead to O.ring failure.
 
+
 **Part 2 (20 points)** 
 
 Answer the following from Question 4 of Bilder and Loughin Section 2.4 Exercises (page 129):
@@ -184,8 +175,10 @@ We can replicate the first model of the paper using the following R code (see be
 
 ```{r, results='asis', message = F, warning = F}
 challenger_binomial <- read.table(path, header=TRUE, sep=",")
-O.ring_binomial <- glm(formula=cbind(O.ring,6-O.ring) ~ Temp + Pressure, family=binomial, data=challenger_binomial)
-#summary(O.ring_binomial)
+O.ring_binomial <- glm(formula=cbind(O.ring,6-O.ring) ~ 
+                         Temp + Pressure, family=binomial(link="logit"), data=challenger_binomial)
+
+summary(O.ring_binomial)
 stargazer(O.ring_binomial, header=F, title = "VIF for Model 2")
 
 ```
@@ -201,10 +194,11 @@ The second model for occurence of O-ring incidents, creates a binary response va
 challenger2 <- read.table(path, header=TRUE, sep=",")
 challenger2$O.ring = ifelse(challenger2$O.ring > 0, 1, 0)
 
-O.ring <- glm(formula=O.ring ~ Temp + Pressure, family=binomial(link="logit"), data=challenger2)
+O.ring <- glm(formula=O.ring ~ Temp + Pressure, family=binomial(link="logit"), 
+              data=challenger2)
 #summary(O.ring)
 stargazer(O.ring, header = F, type = 'latex', omit.table.layout= 'n',
-          title='Regression Results for Model 1')
+          title='Binary Logistic Regression Results for Model 1')
 
 ```
 
@@ -213,7 +207,7 @@ stargazer(O.ring, header = F, type = 'latex', omit.table.layout= 'n',
 
 ```{r, results='asis', message = F, warning = F}
 stargazer(Anova(O.ring), header = F, type = 'latex', omit.table.layout= 'n',
-          title='Regression Results for Model 1')
+          title='Anova Results for Our Model')
 ```
 
 
@@ -230,7 +224,8 @@ Continuing Exercise 4, consider the simplified model $logit(\pi) = \beta_0 +  \b
 (a) Estimate the model.
 
 ```{r, results='asis', message = F, warning = F}
-O.ring.temp <- glm(formula= O.ring ~ Temp, family=binomial(link=logit), data=challenger2)
+O.ring.temp <- glm(formula= O.ring ~ Temp, family=binomial(link=logit), 
+                   data=challenger2)
 stargazer(O.ring.temp, header = F, type = 'latex', omit.table.layout= 'n',
           title='Regression Results for Model 2')
 ```
@@ -246,7 +241,8 @@ stargazer(O.ring.temp, header = F, type = 'latex', omit.table.layout= 'n',
 predict.data <- as.data.frame.table(array(31:81))
 predict.data$Temp <- predict.data$Freq
 
-linear.pred<-predict(object = O.ring.temp, newdata = predict.data, type = "link", se = TRUE)
+linear.pred<-predict(object = O.ring.temp, newdata = predict.data, type = "link", 
+                     se = TRUE)
 #linear.pred
 alpha=.05
 CI.lin.pred.lower<-linear.pred$fit - qnorm(p = 1-alpha/2)*linear.pred$se
@@ -255,11 +251,13 @@ CI.pi.lower<-exp(CI.lin.pred.lower) / (1 + exp(CI.lin.pred.lower))
 CI.pi.upper<-exp(CI.lin.pred.upper) / (1 + exp(CI.lin.pred.upper))
 CI.pi<-exp(linear.pred$fit) / (1 + exp(linear.pred$fit))
 
-df3b <- bind_cols(temp = array(31:81), pi = CI.pi, lowerpiCI = CI.pi.lower, upperpiCI = CI.pi.upper)
+df3b <- bind_cols(temp = array(31:81), pi = CI.pi, lowerpiCI = CI.pi.lower, 
+                  upperpiCI = CI.pi.upper)
 
 w <- aggregate(formula = O.ring ~ Temp, data= challenger2, FUN=sum)
 n <- aggregate(formula = O.ring ~ Temp, data = challenger2, FUN=length)
-w_n <- data.frame(Temperature=w$Temp, success=w$O.ring, trials=n$O.ring, proportion = round(w$O.ring / n$O.ring, 4))
+w_n <- data.frame(Temperature=w$Temp, success=w$O.ring, trials=n$O.ring, 
+                  proportion = round(w$O.ring / n$O.ring, 4))
 w_n$combine <- w$O.ring / n$O.ring
 #w_n
 
@@ -282,13 +280,6 @@ q = ggplot() +
   scale_y_continuous(limits = c(0, 6))
 print(q)
 
-
-#plot(x = w$Temp, y = w$O.ring / n$O.ring, xlab="Temperature (F)", ylab="Estimated Prob", panel.first = grid(col="gray", lty="dotted"))
-#curve(expr = predict(object=O.ring.temp, newdata=data.frame(Temp = x), type="response"), col="red", add = TRUE)
-
-
-
-###Jeff's code
 ```
 
 
@@ -315,19 +306,23 @@ print(p)
 
 ```
 
+The bands appear much wider for the lower temperatures because there are much fewer observations for rocket launches at 31 degrees. As we saw from our EDA, the min of the temperature from the given data was 53 and the max was 81.
 
 (d) The temperature was 31° at launch for the Challenger in 1986. Estimate the probability of an O-ring failure using this temperature, and compute a corresponding confidence interval. Discuss what assumptions need to be made in order to apply the inference procedures.
 
 ```{r}
 predict.data <- data.frame(Temp = 31)
 predict(object=O.ring.temp, newdata=predict.data, type="response")
-library(package=mcprofile)
+
 K <- matrix(data = c(1,31), nrow=1, ncol=2)
 linear.combo <- mcprofile(object=O.ring.temp, CM=K)
 ci.logit.profile <- confint(object = linear.combo, level=0.95)
 ci.logit.profile
 #exp(ci.logit.profile$confint) / (1+exp(ci.logit.profile$confint))
 ```
+
+
+In order to apply the inference procedures, you need to make assumptions about the probability distribution of pi as a statistic. According to the textbook, statistics from maximum likelihood estimation have an approximately normal probability distribution when the sample size is sufficiently large. However, at n=23, our sample size is somewhat small, and the assumption may not hold in reality, thus leading to a situation where the number of calculated intervals containing the parameter pi might actually be below our stated confidence level.
 
 
 (e) Rather than using Wald or profile LR intervals for the probability of failure, Dalal et al. (1989) use a parametric bootstrap to compute intervals. Their process was to (1) simulate a large number of data sets (n = 23 for each) from the estimated model of  Temp; (2) estimate new models for each data set, say and (3) compute  at a specific temperature of interest. The authors used the 0.05 and 0.95 observed quantiles from the  simulated distribution as their 90% confidence interval limits. Using the parametric bootstrap, compute 90% confidence intervals separately at temperatures of 31° and 72°.27
@@ -378,7 +373,7 @@ p31 <- ggplot() +
 print(p31)
 
 #return 90th conf interval
-quantile(sim_matrix[1,],c(0.1,0.9))
+quantile(sim_matrix[1,],c(0.05,0.95))
 
 #plot histogram of 72 degrees
 p72 <- ggplot() + 
@@ -389,7 +384,7 @@ p72 <- ggplot() +
 print(p72)
 
 #return 90th conf interval
-quantile(sim_matrix[2,],c(0.1,0.9))
+quantile(sim_matrix[2,],c(0.05,0.95))
 ```
 
 
@@ -399,12 +394,19 @@ quantile(sim_matrix[2,],c(0.1,0.9))
 (f) Determine if a quadratic term is needed in the model for the temperature.
 
 ```{r}
-O.ring.H0 <- glm(formula= O.ring ~ Temp + Pressure, family=binomial(link=logit), data=challenger2)
-O.ring.HA <- glm(formula= O.ring ~ Temp + Pressure + I(Temp^2), family=binomial(link=logit), data = challenger2)
-anova(O.ring.H0, O.ring.HA, test="Chisq")
+O.ring.quadratic <- glm(formula=O.ring ~ Temp + Pressure + I(Temp^2), family=binomial(link="logit"), data=challenger2)
+O.ring.quadratic.temp <- glm(formula=O.ring ~ Temp + I(Temp^2), family=binomial(link="logit"), data=challenger2)
+
+stargazer(Anova(O.ring.quadratic, test="LR"), header = F, type = 'latex', omit.table.layout= 'n',
+          title='Anova Results with Quadratic Term (with Pressure)')
+
+stargazer(Anova(O.ring.quadratic, test="LR"), header = F, type = 'latex', omit.table.layout= 'n',
+          title='Anova Results with Quadratic Term (without Pressure)')
+#Anova(O.ring.quadratic, test="LR")
+#Anova(O.ring.quadratic.temp, test="LR")
 ```
 
-Based on the p-value of 0.63, there does not appear to be a need for a quadratic term for temperature.
+Based on the p-values for both a model with Temp and Pressure, as well as a model with only Temp, the Anova LR test shows no indication of statistically significant relationships in the presence of a quadratic term.
 
 **Part 4 (10 points)**
 
@@ -417,10 +419,10 @@ O.ring.linear <- lm(formula = O.ring ~ Temp + Pressure, data=challenger2)
 stargazer(O.ring.linear, header=F, title = "Linear Regression Model Output")
 
 # Residual plots
-p<-autoplot(O.ring.linear, top="Regression Diagnostic Plots of Linear Regression Model (outliers removed)")
+p<-autoplot(O.ring.linear, top="Regression Diagnostic Plots of Linear Regression Model")
 
 gridExtra::grid.arrange(grobs = p@plots, 
-                        top="Regression Diagnostic Plots of Linear Regression Model (outliers removed)")
+                        top="Regression Diagnostic Plots of Linear Regression Model")
 ```
 
 Linearity in parameters holds for this model. Random sampling, the next assumption behind classical linear models, is something that is dependent on the methodology behind constructing the data set. Because we are dealing with space shuttle launches, which occur infrequently, there are likely to not be an over-abundance of shuttle launches, and we may actually be dealing with a dataset that is close to or exactly matches the population of total observations available. 
